# GAMETRACKER

./: .gitignore  PLAN.md  README.md
backend/: .env.example  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 8be76ea408b0_add_game_and_settings_tables.py  98d545b3662b_initial_empty_schema.py
backend/app/: config.py  database.py  main.py  models.py  schemas.py
backend/app/routers/: games.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: games.ts  types.ts
frontend/src/components/: GameFormModal.tsx
frontend/src/pages/: Library.tsx
