[project]
name = "game-backlog-backend"
version = "0.1.0"
description = "Backend for the Game Backlog Manager"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "pydantic-settings>=2.3",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
